z-index error fixed

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -13,6 +13,7 @@ body {
   width: 100%;
   position: fixed;
   top: 0;
+  z-index: 100;
 }
 .sec-navbar .navbar {
   margin: auto;
