--- a/style/sass/_navbar.scss
+++ b/style/sass/_navbar.scss
@@ -7,11 +7,11 @@ body {
     background-color: #e9ebee;
 }
 .sec-navbar {
-    // border: 1px solid red;
     background-color: #4267b2;
     width: 100%;
     position: fixed;
     top: 0;
+    z-index: 100;
     .navbar {
         margin: auto;
         width: 80%;
